# NeuroRenderer

./: .gitignore  LICENSE  README.md
Raytracer/: CMakeLists.txt  CMakeSettings.json  Dockerfile  amd_gpu_create_image.bat  run_image.bat
Raytracer/RayTracer/: CMakeLists.txt  RayTracer.cpp
Raytracer/src/: CMakeLists.txt  RayTracer.cpp  RayTracer.h  RayTracer.h.in
nvidia/: Dockerfile  build+run_docker.sh  run_docker.sh
